tests/vertical-slice/reject/cross_module_generic_fn_value/main.hew
// An unannotated generic cross-module named function used as a value is
// rejected: the type parameters cannot be determined from context and an
// explicit type annotation is required.
//
// The context-determined form (annotation that fully determines type params)
// is now accepted — see accept/cross_module_generic_fn_value.
import helpers;

fn main() {
    // No annotation — ambiguous; rejected with a "needs type annotation" diagnostic.
    let f = helpers.first;
    println(f([1, 2, 3]));
}
